in progress autocomplete update

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -117,7 +117,7 @@
         "<p>Good job!  Nice to see students working well together in groups - keep it up!</p>": null,
         "<p>Your photos show clear evidence of student collaboration - keep up the great work!</p>": null,
         "<p>The posters produced during this SOLE look great!</p>": null,
-        "<p>Nice work!  Wonderful to hear your students were so enthusiastic about the process and wanted more... keep it up!</p>": null,
+        "<p>Nice work!  Wonderful to see your students were so enthusiastic about the process and wanted more... keep it up!</p>": null,
         "<p>Your observations clearly document great examples of students engagement.  Looking good!</p>": null,
         "<p>Glad to see students were so excited to complete this SOLE - keep up the good work!</p>": null,
         "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reduicing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
