added 2019 data to ringleader dashboards

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -101,6 +101,13 @@ $(document).ready(function() {
                     borderColor: 'rgb(47,166,154)',
                     data: [{{dashboard.userCountByMonth.[2018]}}],
                     fill: false,
+                },
+                {
+                    label: "New Users 2019",
+                    backgroundColor: 'rgb(3,169,244)',
+                    borderColor: 'rgb(3,169,244)',
+                    data: [{{dashboard.userCountByMonth.[2019]}}],
+                    fill: false,
                 }]
         },
 
@@ -374,6 +381,13 @@ $(document).ready(function() {
                     backgroundColor: 'rgb(47,166,154)',
                     borderColor: 'rgb(47,166,154)',
                     data: [{{dashboard.soleCountByMonth.[2018]}}],
+                    fill: false,
+                },
+                {
+                    label: "SOLEs Created 2019",
+                    backgroundColor: 'rgb(3,169,244)',
+                    borderColor: 'rgb(3,169,244)',
+                    data: [{{dashboard.soleCountByMonth.[2019]}}],
                     fill: false,
                 }]
         },
