--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -59,6 +59,7 @@
                 <div class="card-action">
                     <a href="/admin/browse-soles?sesh={{sesh}}">Browse All SOLEs</a>
                     <a href="/pending-soles?sesh={{sesh}}">Pending SOLEs</a>
+                    <a href="/admin/events?sesh={{sesh}}">Conferences and Events</a>
                 </div>
             </div>
         </div>
