updated admin text for new user count, added in more autocomplete options for SOLE review

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -120,7 +120,9 @@
         "<p>Nice work!  Wonderful to see your students were so enthusiastic about the process and wanted more... keep it up!</p>": null,
         "<p>Your observations clearly document great examples of students engagement.  Looking good!</p>": null,
         "<p>Glad to see students were so excited to complete this SOLE - keep up the good work!</p>": null,
-        "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reduicing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
+        "<p>Student presentations look really good, keep up the great work!</p>": null,
+        "<p>In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.</p>": null,
+        "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reducing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
         //below this line still under review
         "<p>Great work! If you need resources to help students with research, please let us know</p>": null,
         "<p>I noticed you mentioned that students struggled to dig deeper-- if you would like help with ways to counterract this, please let us know!</p>": null,
