--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -16,7 +16,7 @@
             <div class="card">
                 <div class="card-content">
                     <span class="card-title">Welcome to the new Dashboard!</span>
-                    <p>We've had {{usersToday}} new user(s) create accounts today.  You can view some monthly summary graphs below.</p>
+                    <p>We've had {{usersToday}} new user(s) create accounts since yesterday.  You can view some monthly summary graphs below.</p>
                     <ul class="collapsible popout">
                         <li>
                             <div class="collapsible-header"><i class="material-icons">accessibility_new</i>New Users (last 2 weeks)</div>
