--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -121,6 +121,7 @@
         "<p>Your observations clearly document great examples of students engagement.  Looking good!</p>": null,
         "<p>Glad to see students were so excited to complete this SOLE - keep up the good work!</p>": null,
         "<p>Student presentations look really good, keep up the great work!</p>": null,
+        "<p>Glad to see you achieved your objective for this SOLE\; revealing student misconceptions is an important part of formative assessment!</p>": null,
         "<p>In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.</p>": null,
         "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reducing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
         //below this line still under review
