updated autocomplete comments on SOLE approval with rejection message, fixed link to browse all SOLEs admin option

--- a/views/admin-pending-soles.hbs
+++ b/views/admin-pending-soles.hbs
@@ -126,6 +126,7 @@
         "<p>If you're looking to help support students with researching and citing sources, you may want to check out the 'Teacher Resources' page on our website.  We've got dozens of teacher-created printable resources there that could be useful as student organizers.  If you filter by 'Help with the Investigation phase' you should find some good options.</p>": null,
         "<p>In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.</p>": null,
         "<p>Great question!  In order to get the most benefit out of the SOLE process, students should work in groups with less than one device per student.  This helps foster collaboration during the research phase.  It looks like some of the groups in this SOLE were using one device per student; please try reducing the number of devices per group, we will be looking for this in your next SOLE session.</p>": null,
+        "<p>We are unable to approve this SOLE due to missing photographic documentation.  If you have photos of student work produced during this SOLE please reply to this email and we can update your credit towards a CEU appropriately.</p>": null,
         //below this line still under review
         "<p>Great work! If you need resources to help students with research, please let us know</p>": null,
         "<p>I noticed you mentioned that students struggled to dig deeper-- if you would like help with ways to counterract this, please let us know!</p>": null,
