--- a/views/home.hbs
+++ b/views/home.hbs
@@ -30,7 +30,7 @@
                 <br><br>
             </div>
             <div class="card-action center-align">
-                <a href="/browse-soles?sesh={{sesh}}">Browse All Soles</a>
+                <a href="/admin/browse-soles?sesh={{sesh}}">Browse All Soles</a>
                 <a href="/admin/events?sesh={{sesh}}">Conferences</a>
             </div>
         </div>
