adding in sample flyer for trainers to advertise trainings

--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -320,6 +320,40 @@
                             </li>
                             <li class="collection-item">
                                 <div class="left-align">
+                                    <a href="https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/edit?usp=sharing'); return false;"
+                                       target="_blank"
+                                    >
+                                        Sample Advertising Flyer
+                                    </a>
+                                    <a href="https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/export?format=doc"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/export?format=doc'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="Microsoft Word">
+                                        <img src="/images/profile/doc.svg" alt="">
+                                    </a>
+                                    <a href="https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/export?format=pdf"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/export?format=pdf'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="PDF">
+                                        <img src="/images/profile/pdf.svg" alt="">
+                                    </a>
+                                    <a href="https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/edit?usp=sharing"
+                                       onclick="trackOutboundLink('https://docs.google.com/document/d/1A5Sn_C8bRzOdrUVPFhe0kFiWpVsKIy1PHbKJavHQNg4/edit?usp=sharing'); return false;"
+                                       class="secondary-content filetype-icon-wrapper tooltipped"
+                                       target="_blank"
+                                       data-position="bottom"
+                                       data-tooltip="Google Doc">
+                                        <img src="/images/profile/gdoc.svg" alt="">
+                                    </a>
+                                </div>
+                            </li>
+                            <li class="collection-item">
+                                <div class="left-align">
                                     <a href="https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/edit?usp=sharing"
                                        onclick="trackOutboundLink('https://docs.google.com/presentation/d/1-7-k4hJSiULwdUsWtAVXAWBBG9Dea3K1Ss9RdZT9OIg/edit?usp=sharing'); return false;"
                                        target="_blank"
