a branch for browsing users with a little awesome table.  Makes it easier to quickly find people.

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -58,6 +58,7 @@
                 </div>
                 <div class="card-action">
                     <a href="/admin/browse-soles?sesh={{sesh}}">Browse All SOLEs</a>
+                    <a href="/admin/browse-users?sesh={{sesh}}">Browse Users</a>
                     <a href="/pending-soles?sesh={{sesh}}">Pending SOLEs</a>
                     <a href="/admin/events?sesh={{sesh}}">Conferences and Events</a>
                 </div>
