--- a/views/home.hbs
+++ b/views/home.hbs
@@ -31,6 +31,7 @@
             </div>
             <div class="card-action center-align">
                 <a href="/admin/browse-soles?sesh={{sesh}}">Browse All Soles</a>
+                <a href="/admin/browse-users?sesh={{sesh}}">Browse Users</a>
                 <a href="/admin/events?sesh={{sesh}}">Conferences</a>
             </div>
         </div>
