--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -54,6 +54,43 @@
                                 <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=484086850&amp;format=interactive"></iframe>
                             </div>
                         </li>
+                        <li>
+                            <div class="collapsible-header"><i class="material-icons">assessment</i>SOLE State Funnel</div>
+                            <div class="collapsible-body center-align">
+
+                                <div class="row">
+                                    <div class="col s12">
+                                        <ul class="tabs">
+                                            <li class="tab col s3"><a href="#funnel16">2016</a></li>
+                                            <li class="tab col s3"><a href="#funnel17">2017</a></li>
+                                            <li class="tab col s3 "><a href="#funnel18">2018</a></li>
+                                            <li class="tab col s3"><a class="active" href="#funnel19">2019</a></li>
+                                        </ul>
+                                    </div>
+                                    <div id="funnel16" class="col s12">
+
+                                        <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=525054901&format=interactive"></iframe>
+
+                                    </div>
+                                    <div id="funnel17" class="col s12">
+
+                                        <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=225635009&format=interactive"></iframe>
+
+                                    </div>
+                                    <div id="funnel18" class="col s12">
+
+                                        <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=1863938803&format=interactive"></iframe>
+
+                                    </div>
+                                    <div id="funnel19" class="col s12">
+
+                                        <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=1719793379&format=interactive"></iframe>
+
+                                    </div>
+                                </div>
+
+                            </div>
+                        </li>
                     </ul>
                 </div>
                 <div class="card-action">
@@ -491,6 +528,7 @@
             </div>
         </div>
     </div>
+
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <script>
 
@@ -506,7 +544,7 @@
         var map;
         var layer;
 
-        $('document').ready(function(){
+
             var elems = document.querySelectorAll('.datepicker');
             M.Datepicker.init(elems, {
                 format: 'mm/dd/yy'
@@ -517,7 +555,11 @@
             var elems = document.querySelectorAll('.collapsible');
             var instances = M.Collapsible.init(elems, {});
 
-        });
+            var elems = document.querySelectorAll('.tabs');
+            M.Tabs.init(elems, {});
+
+
+
 
         function initMap() {
             map = new google.maps.Map(document.getElementById('map'), {
