--- a/views/home.hbs
+++ b/views/home.hbs
@@ -14,28 +14,28 @@
                 <a href="/soles?sesh={{sesh}}">My SOLEs</a>
                 <a href="/questions?sesh={{sesh}}">Explore Questions</a>
                 <!--{{#if roleData.isAdmin }}-->
-                    <!--<a class="red-text" href="/admin?sesh={{sesh}}">Admin</a>-->
+                    <a class="red-text" href="/admin?sesh={{sesh}}">Admin</a>
                 <!--{{/if}}-->
              </div>
         </div>
-        {{#if roleData.isAdmin }}
-        <div class="card">
-            <div class="card-content center-align">
-                <h5 style="margin-bottom: 1em;">Admin Options</h5>
+        <!--{{#if roleData.isAdmin }}-->
+        <!--<div class="card">-->
+            <!--<div class="card-content center-align">-->
+                <!--<h5 style="margin-bottom: 1em;">Admin Options</h5>-->
 
-                <a class="waves-effect waves-light btn-large" href="/pending-soles?sesh={{sesh}}">Review Pending Soles</a>
-                <br>
-                or check out the full <a class="" href="/admin?sesh={{sesh}}">admin dashboard</a>
+                <!--<a class="waves-effect waves-light btn-large" href="/pending-soles?sesh={{sesh}}">Review Pending Soles</a>-->
+                <!--<br>-->
+                <!--or check out the full <a class="" href="/admin?sesh={{sesh}}">admin dashboard</a>-->
 
-                <br><br>
-            </div>
-            <div class="card-action center-align">
-                <a href="/admin/browse-soles?sesh={{sesh}}">Browse All Soles</a>
-                <a href="/admin/browse-users?sesh={{sesh}}">Browse Users</a>
-                <a href="/admin/events?sesh={{sesh}}">Conferences</a>
-            </div>
-        </div>
-        {{/if}}
+                <!--<br><br>-->
+            <!--</div>-->
+            <!--<div class="card-action center-align">-->
+                <!--<a href="/admin/browse-soles?sesh={{sesh}}">Browse All Soles</a>-->
+                <!--<a href="/admin/browse-users?sesh={{sesh}}">Browse Users</a>-->
+                <!--<a href="/admin/events?sesh={{sesh}}">Conferences</a>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--{{/if}}-->
 
     </div>
 
