--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -31,6 +31,12 @@
                             </div>
                         </li>
                         <li>
+                            <div class="collapsible-header"><i class="material-icons">accessibility_new</i>Sprint Goals</div>
+                            <div class="collapsible-body center-align">
+                                <iframe width="564" height="581" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubhtml?gid=1440128569&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+                            </div>
+                        </li>
+                        <li>
                             <div class="collapsible-header"><i class="material-icons">accessibility_new</i>Percentage Growth</div>
                             <div class="collapsible-body center-align">
                                 <iframe width="610" height="381" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=2112691518&amp;format=interactive"></iframe>
