WIP playing with circle-ci, sorry for the commits. testing out deploying to staging

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -49,6 +49,8 @@
                         <a href="#password-reset-modal" class="modal-trigger">
                             Help! I forgot my password.
                         </a>
+                        <br>
+                        <strong>Testing circle CI deploy. It worked!</strong>
                     </div>
                 </div>
             </form>
