--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -14,9 +14,7 @@
 
     </script>
     <!--jquery - the PSL of Javascript libraries-->
-    <script async type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
