WIP switching to justin's computer. related to #244

--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -67,7 +67,14 @@
                                                 <strong>Notes: </strong>{{image.notes}}
                                             </p>
                                         {{/if}}
-                                    </div>
+                                        {{#if likert}}
+                                            <p>
+                                                <strong>Likert: </strong>
+                                                something
+                                            </p>
+                                        {{/if}}
+
+                                </div>
                                 </div>
                             </div>
                         {{/if}}
