added ambassador material to profile page

--- a/views/admin-conferences-and-events.hbs
+++ b/views/admin-conferences-and-events.hbs
@@ -1,10 +1,8 @@
 <div class="breadcrumb-wrapper">
     <a href="/?sesh={{sesh}}" class="breadcrumb">Home</a>
-    <a href="/admin?sesh={{sesh}}" class="breadcrumb">Admin</a>
+    <a href="/profile?sesh={{sesh}}" class="breadcrumb">Profile</a>
     <a class="breadcrumb">Conferences and Events</a>
 </div>
-
-{{#if roleData.isAdmin }}
 
     <div class="row">
         <div class="col s12">
@@ -14,7 +12,5 @@
 
         </div>
     </div>
-{{/if}}
-
 
 <script src="https://awesome-table.com/AwesomeTableInclude.js"></script>
