Open links to external resources on profile page in new window, but also track opens in google analytics (#264)

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -37,12 +37,13 @@
      * as the event label. Setting the transport method to 'beacon' lets the hit be sent
      * using 'navigator.sendBeacon' in browser that support it.
      */
-    var trackOutboundLink = function(url) {
+    var trackOutboundLink = function(e, url) {
+        e.preventDefault();
         gtag('event', 'click', {
-            'event_category': 'outbound',
-            'event_label': url,
-            'transport_type': 'beacon',
-            'event_callback': function(){document.location = url;}
-        });
+        'event_category': 'outbound',
+        'event_label': url,
+        'transport_type': 'beacon',
+        'event_callback': function(){window.open(url)}
+    });
     }
 </script>
